[Fix/#16] 정산 배치 코드리뷰 반영
  - 처리기 쓰기 메서드(settle/cancel/recordNoSettlement)를 REQUIRES_NEW로 변경
    : 이벤트가 AFTER_COMMIT로 실행될 때 이미 커밋된 트랜잭션에 참여해 쓰기가 반영되지 않는 문제 방지
  - 적재 완료 가드를 커버리지 검증으로 강화(활성 섹터의 모든 ETF 시세 적재 시에만 정산)
    : 부분 적재 중 미적재 ETF가 잘못 0% SETTLED 되는 것 방지, existsByPriceDate 제거
  - prevTradingDay가 없으면(첫 적재일 등) 확정 투자를 오정산하지 않도록 PENDING 유지, NO_INVEST만 처리
  - settle() 매수가 결손 폴백 단위 테스트 추가, 폴백 통합 테스트를 거래정지(폴백 시세) 기준으로 정정
- @TransactionalEventListener(AFTER_COMMIT, fallbackExecution=true)로 발행 측 트랜잭션 커밋 후 실행, tx 없이 발행돼도 유실 없이 실행